# rust-fna3d

./: .gitmodules  Cargo.toml  README.adoc  README.md
crates/: README.adoc
crates/fna3d/: Cargo.toml  README.adoc
crates/fna3d-sys/: Cargo.toml  README.adoc  build.rs  fna3d_wrapper.h
crates/fna3d-sys/src/: lib.rs
crates/fna3d/src/: fna3d_device.rs  fna3d_enums.rs  fna3d_functions.rs  fna3d_structs.rs  lib.rs  wrappers.rs
crates/fna3d/src/fna3d/: fna3d_enums.rs
docs/: README.adoc  README.md  build.md  quick_start.md  refs.md  tips.md  wrapping_c.md
examples/: README.adoc  batcher.rs  clear.rs  quad.rs  texture.rs  triangle.rs
examples/common/: batch.rs  gfx.rs  mod.rs
examples/common/embedded/: mod.rs
fna3d/: Cargo.toml  README.adoc  README.md  build.rs
fna3d-fontstash/: Cargo.toml
fna3d-fontstash/src/: lib.rs
fna3d-imgui/: Cargo.toml
fna3d-imgui/src/: fna3d_renderer.rs  helper.rs  lib.rs  sdl2_backend.rs
fna3d-sys/: Cargo.toml  README.adoc  README.md  build.rs  fna3d_patch.diff  fna3d_wrapper.h  mojoshader_patch.diff  mojoshader_wrapper.h  patches.diff
fna3d-sys/src/: lib.rs
fna3d-sys/src/ffi/: fna3d_bindings.rs  mojoshader_bindings.rs
fna3d-sys/wrappers/: fna3d_wrapper.h  mojoshader_wrapper.h
fna3d/examples/: README.adoc  batcher.rs  clear.rs
fna3d/examples/common/: gfx.rs  mod.rs
fna3d/examples/common/embedded/: SpriteEffect.fxb
fna3d/src/: _meta.rs  _meta_.rs  docs.rs  img.rs  lib.rs  mojo.rs
fna3d/src/fna3d/: fna3d_device.rs  fna3d_enums.rs  fna3d_functions.rs  fna3d_structs.rs  mod.rs
fna3d/src/img/: mod.rs
fna3h/: Cargo.toml  README.md
fna3h/src/: lib.rs
src/: img.rs  lib.rs  mojo.rs
src/fna3d/: fna3d_device.rs  fna3d_enums.rs  fna3d_functions.rs  fna3d_structs.rs
