[package]
name = "fna3d"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
description = "Wrapper of FNA3D"
repository = "https://github.com/toyboot4e/rust-fna3d/fna3d"
readme = "README.md"
keywords = ["graphics", "library", "gamedev"]
edition = "2018"
license = "MIT"
categories = ["game-engines"]

[dependencies]
enum_primitive = "0.1.1"
fna3d-sys = { path = "../fna3d-sys" }
bitflags = "1.2.1"
log = "0.4.11"
